<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/logo"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

    <FrameLayout
        android:id="@+id/appbar"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"


        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:background="@drawable/frame_bg"
>
        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_below="@+id/rl_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            >
            <LinearLayout
                android:id="@+id/rl_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/img_1"
                    android:padding="10dp"
                    android:textSize="16dp"
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />



                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:gravity="start"
                    android:background="@drawable/edittext_bg"
                    android:typeface="monospace"
                    android:textColorHint="#000000"
                    android:textColor="#000000"
                     />
                <TextView
                    android:id="@+id/img_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:text="@string/password"
                    android:layout_centerVertical="true"/>



                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:gravity="start"
                    android:inputType="textPassword"
                    android:layout_toRightOf="@+id/img_2"
                    android:textColorHint="#000000"
                    android:background="@drawable/edittext_bg"
                    android:typeface="monospace"                    android:textColor="#000000"
                     />




            </LinearLayout>

<TextView
    android:id="@+id/forget_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/rl_login"
    android:text="@string/forgetpassword"
    android:padding="10dp"
    android:gravity="right"/>







            <LinearLayout
                android:id="@+id/submit_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">





            </LinearLayout>






        </RelativeLayout>


    </FrameLayout>


    <ImageView
        android:id="@+id/login_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/button"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|center" />

</android.support.design.widget.CoordinatorLayout>